--- a/project_2/PROJECT_2_Анализ вакансий на hh.ru.ipynb
+++ b/project_2/PROJECT_2_Анализ вакансий на hh.ru.ipynb
@@ -2579,7 +2579,7 @@
       "metadata": {},
       "source": [
         "### Дополнительные исследования\n",
-        "#### 1. Исследование распределения количества ваканчий в зависимости от предъявляемого требования опыта к соискателю."
+        "#### 1. Исследование распределения количества ваканcий в зависимости от предъявляемого требования опыта к соискателю."
       ]
     },
     {
@@ -4478,7 +4478,7 @@
         "    width=1100,\n",
         "    title='Средняя ЗП по городах миллионниках и остальных регионах'\n",
         ")\n",
-        "fig.show()\n"
+        "fig.show('png')\n"
       ]
     },
     {
